--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "repository": "https://github.com/liushao121/projectx.git",
   "devDependencies": {
+    "axios": "^0.15.2",
     "babel-core": "^6.1.21",
     "babel-loader": "^6.1.0",
     "babel-plugin-transform-object-rest-spread": "^6.16.0",
