--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "babel-plugin-transform-runtime": "^6.1.18",
     "babel-preset-es2015": "^6.1.18",
     "babel-runtime": "^5.8.0",
+    "bootstrap": "^3.3.7",
     "css-loader": "^0.21.0",
     "echarts": "^3.2.3",
     "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.5",
+    "jquery": "^3.1.1",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "vue-hot-reload-api": "^2.0.6",
