--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-es2015": "^6.1.18",
     "babel-runtime": "^5.8.0",
     "bootstrap": "^3.3.7",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.21.0",
     "echarts": "^3.2.3",
     "extract-text-webpack-plugin": "^0.9.1",
