--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "vuex": "^2.0.0",
     "vuex-router-sync": "^3.0.0",
     "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.1"
+    "webpack-dev-server": "^1.12.1",
+    "webuploader": "^0.1.8"
   },
   "peerDependencies": {}
 }
