--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "echarts": "^3.2.3",
     "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.5",
+    "html-loader": "^0.4.4",
     "jquery": "^3.1.1",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
